--- a/packages/docs/src/content/docs/patterns/async-loading.mdx
+++ b/packages/docs/src/content/docs/patterns/async-loading.mdx
@@ -7,7 +7,7 @@ import { Aside } from '@astrojs/starlight/components';
 
 React has Suspense. Solid has `<Suspense>` and `<Show>`. These handle async loading states declaratively.
 
-Lattice handles async state explicitly through the `resource` primitive and `match` for rendering. No magic, no special components—just reactive state.
+Lattice handles async state explicitly through two primitives: `resource` for reactive data fetching with automatic refetch, and `load` for simpler async boundaries. Both use `match` for rendering. No magic, no special components—just reactive state.
 
 ---
 
@@ -203,6 +203,66 @@ el('button').props({
 
 ---
 
+## The Load Pattern
+
+For simpler async boundaries—especially in SSR scenarios—use `load()`:
+
+```typescript
+const ProductList = (svc: Service) => {
+  const { el, load, match } = svc;
+
+  return load(
+    () => fetch('/api/products').then(r => r.json()),
+    (state) => match(state.status, (status) => {
+      switch (status) {
+        case 'pending':
+          return Spinner(svc);
+        case 'error':
+          return ErrorMessage(svc, state.error());
+        case 'ready':
+          return ProductGrid(svc, state.data()!);
+      }
+    })
+  );
+};
+```
+
+The key difference: `load()` takes a fetcher and a renderer. The renderer receives a state object with reactive properties (`status`, `data`, `error`) that you read by calling them.
+
+### When to use each
+
+**Use `resource`** when you need:
+- Automatic refetching when dependencies change
+- AbortController integration for request cancellation
+- A reactive value you can pass around and read anywhere
+
+**Use `load`** when you need:
+- Simple one-shot data fetching
+- SSR streaming with explicit data boundaries
+- Direct control over the loading UI in one place
+
+```typescript
+// load() is ideal for SSR - data and UI are co-located
+const Page = (svc: Service) => {
+  const { el, load, match } = svc;
+
+  return el('main')(
+    load(
+      () => fetchPageData(),
+      (state) => match(state.status, (status) =>
+        status === 'ready'
+          ? PageContent(svc, state.data()!)
+          : status === 'error'
+            ? ErrorFallback(svc)
+            : LoadingSkeleton(svc)
+      )
+    )
+  );
+};
+```
+
+---
+
 ## Cleanup
 
 Resources should be disposed when no longer needed:
@@ -214,9 +274,7 @@ const ProductPanel = (svc: Service) => {
   const products = resource((s) => fetchProducts(s));
 
   // Cleanup when element is removed
-  return el('div').ref((node, cleanup) => {
-    cleanup(products.dispose);
-  })(
+  return el('div').ref(() => products.dispose)(
     // ... content
   );
 };
