--- a/packages/docs/src/content/docs/patterns/refs.mdx
+++ b/packages/docs/src/content/docs/patterns/refs.mdx
@@ -16,7 +16,6 @@ The `.ref()` method takes a callback that runs when the element is mounted:
 ```typescript
 const AutofocusInput = ({ el }: Service) => {
   return el('input').ref((node) => {
-    // `node` is the actual DOM element
     node.focus();
   })();
 };
@@ -26,14 +25,14 @@ const AutofocusInput = ({ el }: Service) => {
 
 ## Cleanup
 
-The callback receives a cleanup registration function:
+Return a cleanup function from the callback:
 
 ```typescript
 const ResizeObserved = (svc: Service) => {
   const { el, signal } = svc;
   const dimensions = signal({ width: 0, height: 0 });
 
-  return el('div').ref((node, cleanup) => {
+  return el('div').ref((node) => {
     const observer = new ResizeObserver((entries) => {
       const { width, height } = entries[0].contentRect;
       dimensions({ width, height });
@@ -41,13 +40,15 @@ const ResizeObserved = (svc: Service) => {
 
     observer.observe(node);
 
-    // Cleanup when element is removed
-    cleanup(() => observer.disconnect());
+    // Return cleanup function
+    return () => observer.disconnect();
   })(
     // ... children
   );
 };
 ```
+
+The cleanup runs when the element is removed from the DOM.
 
 ---
 
@@ -68,7 +69,7 @@ const FocusOnCondition = ({ el, signal, effect }: Service) => {
   });
 
   return el('div')(
-    el('input').ref(inputRef)(),
+    el('input').ref((node) => inputRef(node))(),
     el('button').props({
       onclick: () => shouldFocus(true)
     })('Focus Input')
@@ -136,7 +137,7 @@ Use refs to integrate non-reactive libraries:
 const Chart = (svc: Service, props: { data: Readable<ChartData> }) => {
   const { el, effect } = svc;
 
-  return el('canvas').ref((canvas, cleanup) => {
+  return el('canvas').ref((canvas) => {
     // Initialize chart library
     const chart = new ChartLibrary(canvas, {
       data: props.data()
@@ -147,10 +148,11 @@ const Chart = (svc: Service, props: { data: Readable<ChartData> }) => {
       chart.update(props.data());
     });
 
-    cleanup(() => {
+    // Return cleanup
+    return () => {
       disposeEffect();
       chart.destroy();
-    });
+    };
   })();
 };
 ```
@@ -159,7 +161,7 @@ const Chart = (svc: Service, props: { data: Readable<ChartData> }) => {
 
 ## Multiple Refs
 
-For collections, store refs in an array or map:
+For collections, store refs in a map:
 
 ```typescript
 const ScrollableList = (svc: Service) => {
@@ -182,12 +184,17 @@ const ScrollableList = (svc: Service) => {
       map(items, (item) =>
         el('div').props({ style: 'height: 100px' }).ref((node) => {
           itemRefs.set(item(), node);
+          return () => itemRefs.delete(item());
         })(item)
       )
     )
   );
 };
 ```
+
+<Aside type="tip">
+When using refs with `map`, return a cleanup that removes the ref from the collection. Otherwise refs to removed items accumulate.
+</Aside>
 
 ---
 
