--- a/packages/docs/src/content/docs/guides/adding-view.mdx
+++ b/packages/docs/src/content/docs/guides/adding-view.mdx
@@ -158,7 +158,7 @@ const app = el('div')(
 Combine behaviors with view for reactive components:
 
 ```typescript
-import { svc, el, computed, use } from './service';
+import { svc, el, computed } from './service';
 import { counter } from './behaviors/counter';
 
 const useCounter = svc(counter);
