--- a/packages/docs/src/content/docs/guides/creating-a-behavior.mdx
+++ b/packages/docs/src/content/docs/guides/creating-a-behavior.mdx
@@ -9,33 +9,15 @@ A **behavior** is a pattern. It's a function that bundles signals, computeds, an
 
 ---
 
-## The Shape
+## The Simple Approach
+
+The easiest way to create a behavior is to import primitives directly from your service:
 
 ```typescript
-const behaviorName = (svc: SignalsSvc) => (options?) => {
-  // Create state
-  // Return API
-};
-```
+// behaviors/useCounter.ts
+import { signal, computed } from '../service';
 
-Three levels:
-1. **Service injection** — `(svc) =>` receives the signal primitives
-2. **Factory** — `(options?) =>` configures the instance
-3. **API** — the object consumers interact with
-
----
-
-## A Counter Behavior
-
-```typescript
-import type { SignalFactory, ComputedFactory } from '@lattice/signals';
-
-type SignalsSvc = {
-  signal: SignalFactory;
-  computed: ComputedFactory;
-};
-
-const counter = ({ signal, computed }: SignalsSvc) => (initial = 0) => {
+export const useCounter = (initial = 0) => {
   const count = signal(initial);
   const doubled = computed(() => count() * 2);
 
@@ -49,20 +31,67 @@ const counter = ({ signal, computed }: SignalsSvc) => (initial = 0) => {
 };
 ```
 
+Use it anywhere, with anything else using the same service:
+
+```typescript
+import { useCounter } from './behaviors/useCounter';
+
+const counter = useCounter(10);
+counter.increment();
+counter.count();  // 11
+```
+
+This works great for simple cases. The behavior is tied to your service, which is fine when you have a single app context.
+
 ---
 
-## Composing the Service
+## The Portable Pattern
 
-The service is a provider function. Calling it provides the service a function automatically (in our case, a behavior you want to compose).
+When you need behaviors that work across different contexts—testing with mocks, sharing between apps, or SSR—use the portable pattern.
 
----
+### The Shape
 
-## Using It
+```typescript
+// The "portable" pattern is...just wrapping your function in a function that provides the service
+const behaviorName = (svc: SignalsSvc) => (options?) => {
+  // Create state
+  // Return API
+};
+```
+
+Three levels:
+1. **Service injection** — `(svc) =>` receives the service and primitives
+2. **Factory** — `(options?) =>` any arguments you want to provide to your function
+3. **API** — the object consumers interact with
+
+From now on, we'll be working with portable functions.
+
+### A Counter Behavior
+
+```typescript
+// You still have to define your service type somewhere!
+import type { Service } from './service';
+
+const counter = ({ signal, computed }: Service) => (initial = 0) => {
+  const count = signal(initial);
+  const doubled = computed(() => count() * 2);
+
+  return {
+    count,
+    doubled,
+    increment: () => count(count() + 1),
+    decrement: () => count(count() - 1),
+    reset: () => count(initial),
+  };
+};
+```
+
+### Using It
 
 ```typescript
 import { svc } from './service';
 
-// Instead of destructuing svc, you can call it to provide the service
+// Instead of destructuring primitives, you provide it a function that expects what your service provides
 const useCounter = svc(counter);
 
 const c = useCounter(10);
@@ -77,9 +106,7 @@ c.count();      // 10
 
 `svc(counter)` provides (or injects) the service. The caller just provides options.
 
----
-
-## Why This Shape?
+### Why This Shape?
 
 The two-level function `(svc) => (options) =>` exists for a reason:
 
@@ -101,10 +128,10 @@ counterB.count();  // 100
 
 ## Composing Behaviors
 
-Behaviors can use other behaviors. Destructure `use` from the service to compose them:
+Behaviors can compose other behaviors:
 
 ```typescript
-const disclosure = ({ signal }: SignalsSvc) => (initialOpen = false) => {
+const disclosure = ({ signal }: Service) => (initialOpen = false) => {
   const isOpen = signal(initialOpen);
 
   return {
@@ -115,7 +142,9 @@ const disclosure = ({ signal }: SignalsSvc) => (initialOpen = false) => {
   };
 };
 
-const dropdown = (svc: SignalsSvc) => {
+const dropdown = (svc: Service) => {
+  // As a convention, we set these up in the outer function (service layer), although you could
+  // just as easily do the same in the return function, if you don't mind it running on every mount.
   const useDisclosure = svc(disclosure);
 
   return (options?: { initialOpen?: boolean }) => {
