--- a/packages/docs/src/content/docs/index.mdx
+++ b/packages/docs/src/content/docs/index.mdx
@@ -1,3 +1,20 @@
+---
+title: Lattice
+description: An experimental collection of composable reactive primitives.
+template: splash
+hero:
+  title: Lattice
+  tagline: Portable reactive specs, composable services.
+  actions:
+    - text: Read the Docs
+      link: /start-here/quick-start/
+      icon: right-arrow
+      variant: primary
+    - text: GitHub
+      link: https://github.com/hfour/lattice
+      icon: external
+---
+
 # Lattice
 
 > **DISCLAIMER:**
