docs and skills

--- a/packages/docs/src/content/docs/patterns/index.mdx
+++ b/packages/docs/src/content/docs/patterns/index.mdx
@@ -11,6 +11,12 @@ This section covers common patterns you'll encounter when building with Lattice.
 
 ## Available Patterns
 
+### [Signal Patterns](/patterns/signal-patterns/)
+Common patterns for working with signals: updaters, derived actions, debouncing, async actions, and more.
+
+### [Forms](/patterns/forms/)
+Patterns for building reactive forms with validation, field composition, and submission handling.
+
 ### [Behaviors](/patterns/behaviors/)
 Headless, reusable UI logic. State and actions without the markup.
 
